<resources>
    <string name="app_name">MessageAppGroup1</string>
    <string name="welcome_line1">Welcome!</string>
    <string name="welcome_line2">Please log in or register.</string>
    <string name="text_nickname">Nickname:</string>
    <string name="text_firstname">First Name:</string>
    <string name="text_lastname">Last Name:</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password:</string>
    <string name="text_passwordConfirm">Password Confirm:</string>
    <string name="text_current_password">Current password</string>
    <string name="text_register">REGISTER</string>
    <string name="text_login">LOGIN</string>
    <string name="button_forgot_password">Forgot Password</string>
    <string name="welcome_line3">Please register for an account.</string>
    <string name="successful_login">Login successful!</string>
    <string name="logout">Logout</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Group1 Messenger App</string>
    <string name="nav_header_subtitle">Group1@uw.edu</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="option_weather">Weather</string>
    <string name="option_account_settings">Account Settings</string>
    <string name="option_stay_logged_in">Stay Logged In</string>
    <string name="option_logout">Logout</string>

    <string name="title_drawer_home_title">Group1 Messenger App</string>
    <string name="title_drawer_home_subtitle">Best App Ever</string>
    <string name="title_activity_landing_page">LandingPageActivity</string>
    <string name="title_change_password">Change Password</string>
    <string name="tab_chats">Chats</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_search">Search</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="key_screen_dimensions">dimensions</string>
    <string name="title_activity_weather_fragment">WeatherFragment</string>

    <string name="first_name_contact">Name</string>
    <string name="send_message_button_contact_fragment">Send a message</string>
    <string name="delete_connection_contact_fragment">DELETE AS FRIEND</string>
    <string name="title_activity_account_settings">AccountSettings</string>

    <string name="verify_message_button_text">I have verified, proceed</string>
    <string name="verify_message_header_text">
        You\'re 99.99% of the way there!
    </string>
    <string name="verify_message_body_text">
        It seems your account has not been email verified yet.\n \n
        Please follow the instructions in your email to verify your account,
        then press that button.
    </string>
    <string name="change_email_warning">
        Double check your new email. \n
        Once you change your email you will be logged out, and must
        verify your new email before you can use this app again.
    </string>
    <string name="confirm_request">Confirm</string>
    <string name="requests">Requests</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="account_reset_password">Reset Password</string>
    <string name="account_firstname">First Name</string>
    <string name="account_lastname">Last Name</string>
    <string name="account_email">Email:</string>
    <string name="retype_email">Retype Email:</string>
    <string name="change_email">Change Email</string>
    <string name="account_nickname">Nickname</string>
    <string name="button_apply_changes">Apply Changes</string>
    <string name="button_account_delete">DELETE ACCOUNT</string>
    <string name="account_switch_nickname_firstname">Display Nickname</string>
    <string name="add_as_friend">Add As Friend</string>
    <string name="search_one">Search one at a time.</string>

    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Password Confirm</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_email">Retype Email</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_username">Username</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_confirm_email_2">Confirm Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
